Shop Item List Pages
- Include default control to determin how many to display
- Fix for potential bug with variable conflict for random item clothing
- Fix preventing statistics page from loading when its first accessable

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1120,16 +1120,19 @@ removed unused:
 	z-index: 107;
 }
 .layer-leftarmunderclothes {
-	z-index: 107;
+	z-index: 109;
 }
 .layer-rightarmunderclothes {
-	z-index: 107;
+	z-index: 109;
+}
+.layer-hands {
+	z-index: 110;
 }
 .layer-rightarmclothes {
-	z-index: 110;
+	z-index: 112;
 }
 .layer-leftarmclothes {
-	z-index: 110;
+	z-index: 112;
 }
 .layer-lower-high {
 	z-index: 115;
@@ -1236,6 +1239,9 @@ removed unused:
 .layer-sexbaseback {
 	z-index: 1;
 }
+.layer-sexBackArm {
+	z-index: 2;
+}
 .layer-sexpenis {
 	z-index: 5;
 }
@@ -1319,6 +1325,10 @@ removed unused:
 }
 .layer-sexarmsskin {
 	z-index: 108;
+}
+
+.layer-sexhands {
+	z-index: 110;
 }
 .layer-sexsleeve {
 	z-index: 110;
@@ -1850,47 +1860,47 @@ label {
 }
 
 /* Old Clothing classes, need to be removed once all use of them is replaced, this includes the wetness classes */
-.upper-blue .colour-upper, .lower-blue .colour-lower, .under_lower-blue .colour-under_lower, .under_upper-blue .colour-under_upper, .head-blue .colour-head, .face-blue .colour-face, .neck-blue .colour-neck, .legs-blue .colour-legs, .feet-blue .colour-feet, .upper_acc-blue .colour-upper_acc, .lower_acc-blue .colour-lower_acc, .under_lower_acc-blue .colour-under_lower_acc, .under_upper_acc-blue .colour-under_upper_acc, .head_acc-blue .colour-head_acc, .face_acc-blue .colour-face_acc, .neck_acc-blue .colour-neck_acc, .legs_acc-blue .colour-legs_acc, .feet_acc-blue .colour-feet_acc , .icon-blue{
+.upper-blue .colour-upper, .lower-blue .colour-lower, .under_lower-blue .colour-under_lower, .under_upper-blue .colour-under_upper, .head-blue .colour-head, .face-blue .colour-face, .neck-blue .colour-neck .hands-blue .colour-hands, .legs-blue .colour-legs, .feet-blue .colour-feet, .upper_acc-blue .colour-upper_acc, .lower_acc-blue .colour-lower_acc, .under_lower_acc-blue .colour-under_lower_acc, .under_upper_acc-blue .colour-under_upper_acc, .head_acc-blue .colour-head_acc, .face_acc-blue .colour-face_acc, .neck_acc-blue .colour-neck_acc, .hands_acc-blue .colour-hands_acc, .legs_acc-blue .colour-legs_acc, .feet_acc-blue .colour-feet_acc , .icon-blue{
 	-webkit-filter: hue-rotate(-120deg) saturate(100%) brightness(100%) contrast(100%);
 	filter: hue-rotate(-120deg) saturate(100%) brightness(100%) contrast(100%);
 }
-.upper-white .colour-upper, .lower-white .colour-lower, .under_lower-white .colour-under_lower, .under_upper-white .colour-under_upper, .head-white .colour-head, .face-white .colour-face, .neck-white .colour-neck, .legs-white .colour-legs, .feet-white .colour-feet, .upper_acc-white .colour-upper_acc, .lower_acc-white .colour-lower_acc, .under_lower_acc-white .colour-under_lower_acc, .under_upper_acc-white .colour-under_upper_acc, .head_acc-white .colour-head_acc, .face_acc-white .colour-face_acc, .neck_acc-white .colour-neck_acc, .legs_acc-white .colour-legs_acc, .feet_acc-white .colour-feet_acc, .icon-white{
+.upper-white .colour-upper, .lower-white .colour-lower, .under_lower-white .colour-under_lower, .under_upper-white .colour-under_upper, .head-white .colour-head, .face-white .colour-face, .neck-white .colour-neck, .hands-white .colour-hands, .legs-white .colour-legs, .feet-white .colour-feet, .upper_acc-white .colour-upper_acc, .lower_acc-white .colour-lower_acc, .under_lower_acc-white .colour-under_lower_acc, .under_upper_acc-white .colour-under_upper_acc, .head_acc-white .colour-head_acc, .face_acc-white .colour-face_acc, .neck_acc-white .colour-neck_acc, .hands_acc-white .colour-hands_acc, .legs_acc-white .colour-legs_acc, .feet_acc-white .colour-feet_acc, .icon-white{
 	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(440%) contrast(140%);
 	filter: hue-rotate(0deg) saturate(0%) brightness(440%) contrast(140%);
 }
-.upper-red .colour-upper, .lower-red .colour-lower, .under_lower-red .colour-under_lower, .under_upper-red .colour-under_upper, .head-red .colour-head, .face-red .colour-face, .neck-red .colour-neck, .legs-red .colour-legs, .feet-red .colour-feet, .upper_acc-red .colour-upper_acc, .lower_acc-red .colour-lower_acc, .under_lower_acc-red .colour-under_lower_acc, .under_upper_acc-red .colour-under_upper_acc, .head_acc-red .colour-head_acc, .face_acc-red .colour-face_acc, .neck_acc-red .colour-neck_acc, .legs_acc-red .colour-legs_acc, .feet_acc-red .colour-feet_acc, .icon-red{
+.upper-red .colour-upper, .lower-red .colour-lower, .under_lower-red .colour-under_lower, .under_upper-red .colour-under_upper, .head-red .colour-head, .face-red .colour-face, .neck-red .colour-neck, .hands-red .colour-hands, .legs-red .colour-legs, .feet-red .colour-feet, .upper_acc-red .colour-upper_acc, .lower_acc-red .colour-lower_acc, .under_lower_acc-red .colour-under_lower_acc, .under_upper_acc-red .colour-under_upper_acc, .head_acc-red .colour-head_acc, .face_acc-red .colour-face_acc, .neck_acc-red .colour-neck_acc, .hands_acc-red .colour-hands_acc, .legs_acc-red .colour-legs_acc, .feet_acc-red .colour-feet_acc, .icon-red{
 	-webkit-filter: hue-rotate(0deg) saturate(100%) brightness(100%) contrast(100%);
 	filter: hue-rotate(0deg) saturate(100%) brightness(100%) contrast(100%);
 }
-.upper-green .colour-upper, .lower-green .colour-lower, .under_lower-green .colour-under_lower, .under_upper-green .colour-under_upper, .head-green .colour-head, .face-green .colour-face, .neck-green .colour-neck, .legs-green .colour-legs, .feet-green .colour-feet, .upper_acc-green .colour-upper_acc, .lower_acc-green .colour-lower_acc, .under_lower_acc-green .colour-under_lower_acc, .under_upper_acc-green .colour-under_upper_acc, .head_acc-green .colour-head_acc, .face_acc-green .colour-face_acc, .neck_acc-green .colour-neck_acc, .legs_acc-green .colour-legs_acc, .feet_acc-green .colour-feet_acc, .icon-green{
+.upper-green .colour-upper, .lower-green .colour-lower, .under_lower-green .colour-under_lower, .under_upper-green .colour-under_upper, .head-green .colour-head, .face-green .colour-face, .neck-green .colour-neck, .hands-green .colour-hands, .legs-green .colour-legs, .feet-green .colour-feet, .upper_acc-green .colour-upper_acc, .lower_acc-green .colour-lower_acc, .under_lower_acc-green .colour-under_lower_acc, .under_upper_acc-green .colour-under_upper_acc, .head_acc-green .colour-head_acc, .face_acc-green .colour-face_acc, .neck_acc-green .colour-neck_acc, .hands_acc-green .colour-hands_acc, .legs_acc-green .colour-legs_acc, .feet_acc-green .colour-feet_acc, .icon-green{
 	-webkit-filter: hue-rotate(120deg) saturate(100%) brightness(150%) contrast(100%);
 	filter: hue-rotate(120deg) saturate(100%) brightness(150%) contrast(100%);
 }
-.upper-black .colour-upper, .lower-black .colour-lower, .under_lower-black .colour-under_lower, .under_upper-black .colour-under_upper, .head-black .colour-head, .face-black .colour-face, .neck-black .colour-neck, .legs-black .colour-legs, .feet-black .colour-feet, .upper_acc-black .colour-upper_acc, .lower_acc-black .colour-lower_acc, .under_lower_acc-black .colour-under_lower_acc, .under_upper_acc-black .colour-under_upper_acc, .head_acc-black .colour-head_acc, .face_acc-black .colour-face_acc, .neck_acc-black .colour-neck_acc, .legs_acc-black .colour-legs_acc, .feet_acc-black .colour-feet_acc, .icon-black{
+.upper-black .colour-upper, .lower-black .colour-lower, .under_lower-black .colour-under_lower, .under_upper-black .colour-under_upper, .head-black .colour-head, .face-black .colour-face, .neck-black .colour-neck, .hands-black .colour-hands, .legs-black .colour-legs, .feet-black .colour-feet, .upper_acc-black .colour-upper_acc, .lower_acc-black .colour-lower_acc, .under_lower_acc-black .colour-under_lower_acc, .under_upper_acc-black .colour-under_upper_acc, .head_acc-black .colour-head_acc, .face_acc-black .colour-face_acc, .neck_acc-black .colour-neck_acc, .hands_acc-black .colour-hands_acc, .legs_acc-black .colour-legs_acc, .feet_acc-black .colour-feet_acc, .icon-black{
 	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(110%) contrast(110%);
 	filter: hue-rotate(0deg) saturate(0%) brightness(110%) contrast(110%);
 }
-.upper-pink .colour-upper, .lower-pink .colour-lower, .under_lower-pink .colour-under_lower, .under_upper-pink .colour-under_upper, .head-pink .colour-head, .face-pink .colour-face, .neck-pink .colour-neck, .legs-pink .colour-legs, .feet-pink .colour-feet, .upper_acc-pink .colour-upper_acc, .lower_acc-pink .colour-lower_acc, .under_lower_acc-pink .colour-under_lower_acc, .under_upper_acc-pink .colour-under_upper_acc, .head_acc-pink .colour-head_acc, .face_acc-pink .colour-face_acc, .neck_acc-pink .colour-neck_acc, .legs_acc-pink .colour-legs_acc, .feet_acc-pink .colour-feet_acc, .icon-pink{
+.upper-pink .colour-upper, .lower-pink .colour-lower, .under_lower-pink .colour-under_lower, .under_upper-pink .colour-under_upper, .head-pink .colour-head, .face-pink .colour-face, .neck-pink .colour-neck, .hands-pink .colour-hands, .legs-pink .colour-legs, .feet-pink .colour-feet, .upper_acc-pink .colour-upper_acc, .lower_acc-pink .colour-lower_acc, .under_lower_acc-pink .colour-under_lower_acc, .under_upper_acc-pink .colour-under_upper_acc, .head_acc-pink .colour-head_acc, .face_acc-pink .colour-face_acc, .neck_acc-pink .colour-neck_acc, .hands_acc-pink .colour-hands_acc, .legs_acc-pink .colour-legs_acc, .feet_acc-pink .colour-feet_acc, .icon-pink{
 	-webkit-filter: hue-rotate(-30deg) saturate(50%) contrast(100%) brightness(160%);
 	filter: hue-rotate(-30deg) saturate(50%) contrast(100%) brightness(160%);
 }
-.upper-purple .colour-upper, .lower-purple .colour-lower, .under_lower-purple .colour-under_lower, .under_upper-purple .colour-under_upper, .head-purple .colour-head, .face-purple .colour-face, .neck-purple .colour-neck, .legs-purple .colour-legs, .feet-purple .colour-feet, .upper_acc-purple .colour-upper_acc, .lower_acc-purple .colour-lower_acc, .under_lower_acc-purple .colour-under_lower_acc, .under_upper_acc-purple .colour-under_upper_acc, .head_acc-purple .colour-head_acc, .face_acc-purple .colour-face_acc, .neck_acc-purple .colour-neck_acc, .legs_acc-purple .colour-legs_acc, .feet_acc-purple .colour-feet_acc, .icon-purple {
+.upper-purple .colour-upper, .lower-purple .colour-lower, .under_lower-purple .colour-under_lower, .under_upper-purple .colour-under_upper, .head-purple .colour-head, .face-purple .colour-face, .neck-purple .colour-neck, .hands-purple .colour-hands, .legs-purple .colour-legs, .feet-purple .colour-feet, .upper_acc-purple .colour-upper_acc, .lower_acc-purple .colour-lower_acc, .under_lower_acc-purple .colour-under_lower_acc, .under_upper_acc-purple .colour-under_upper_acc, .head_acc-purple .colour-head_acc, .face_acc-purple .colour-face_acc, .neck_acc-purple .colour-neck_acc, .hands_acc-purple .colour-hands_acc, .legs_acc-purple .colour-legs_acc, .feet_acc-purple .colour-feet_acc, .icon-purple {
 	-webkit-filter: hue-rotate(-80deg) saturate(100%) brightness(100%) contrast(100%);
 	filter: hue-rotate(-80deg) saturate(100%) brightness(100%) contrast(100%);
 }
-.upper-tangerine .colour-upper, .lower-tangerine .colour-lower, .under_lower-tangerine .colour-under_lower, .under_upper-tangerine .colour-under_upper, .head-tangerine .colour-head, .face-tangerine .colour-face, .neck-tangerine .colour-neck, .legs-tangerine .colour-legs, .feet-tangerine .colour-feet, .upper_acc-tangerine .colour-upper_acc, .lower_acc-tangerine .colour-lower_acc, .under_lower_acc-tangerine .colour-under_lower_acc, .under_upper_acc-tangerine .colour-under_upper_acc, .head_acc-tangerine .colour-head_acc, .face_acc-tangerine .colour-face_acc, .neck_acc-tangerine .colour-neck_acc, .legs_acc-tangerine .colour-legs_acc, .feet_acc-tangerine .colour-feet_acc, .icon-tangerine {
+.upper-tangerine .colour-upper, .lower-tangerine .colour-lower, .under_lower-tangerine .colour-under_lower, .under_upper-tangerine .colour-under_upper, .head-tangerine .colour-head, .face-tangerine .colour-face, .neck-tangerine .colour-neck, .hands-tangerine .colour-hands, .legs-tangerine .colour-legs, .feet-tangerine .colour-feet, .upper_acc-tangerine .colour-upper_acc, .lower_acc-tangerine .colour-lower_acc, .under_lower_acc-tangerine .colour-under_lower_acc, .under_upper_acc-tangerine .colour-under_upper_acc, .head_acc-tangerine .colour-head_acc, .face_acc-tangerine .colour-face_acc, .neck_acc-tangerine .colour-neck_acc, .hands_acc-tangerine .colour-hands_acc, .legs_acc-tangerine .colour-legs_acc, .feet_acc-tangerine .colour-feet_acc, .icon-tangerine {
 	-webkit-filter: hue-rotate(60deg) saturate(150%) brightness(200%) contrast(100%);
 	filter: hue-rotate(60deg) saturate(150%) brightness(200%) contrast(100%);
 }
-.upper-teal .colour-upper, .lower-teal .colour-lower, .under_lower-teal .colour-under_lower, .under_upper-teal .colour-under_upper, .head-teal .colour-head, .face-teal .colour-face, .neck-teal .colour-neck, .legs-teal .colour-legs, .feet-teal .colour-feet, .upper_acc-teal .colour-upper_acc, .lower_acc-teal .colour-lower_acc, .under_lower_acc-teal .colour-under_lower_acc, .under_upper_acc-teal .colour-under_upper_acc, .head_acc-teal .colour-head_acc, .face_acc-teal .colour-face_acc, .neck_acc-teal .colour-neck_acc, .legs_acc-teal .colour-legs_acc, .feet_acc-teal .colour-feet_acc, .icon-teal {
+.upper-teal .colour-upper, .lower-teal .colour-lower, .under_lower-teal .colour-under_lower, .under_upper-teal .colour-under_upper, .head-teal .colour-head, .face-teal .colour-face, .neck-teal .colour-neck, .hands-teal .colour-hands, .legs-teal .colour-legs, .feet-teal .colour-feet, .upper_acc-teal .colour-upper_acc, .lower_acc-teal .colour-lower_acc, .under_lower_acc-teal .colour-under_lower_acc, .under_upper_acc-teal .colour-under_upper_acc, .head_acc-teal .colour-head_acc, .face_acc-teal .colour-face_acc, .neck_acc-teal .colour-neck_acc, .hands_acc-teal .colour-hands_acc, .legs_acc-teal .colour-legs_acc, .feet_acc-teal .colour-feet_acc, .icon-teal {
 	-webkit-filter: hue-rotate(-180deg) saturate(75%) brightness(200%) contrast(100%);
 	filter: hue-rotate(-180deg) saturate(75%) brightness(200%) contrast(100%);
 }
-.upper-yellow .colour-upper, .lower-yellow .colour-lower, .under_lower-yellow .colour-under_lower, .under_upper-yellow .colour-under_upper, .head-yellow .colour-head, .face-yellow .colour-face, .neck-yellow .colour-neck, .legs-yellow .colour-legs, .feet-yellow .colour-feet, .upper_acc-yellow .colour-upper_acc, .lower_acc-yellow .colour-lower_acc, .under_lower_acc-yellow .colour-under_lower_acc, .under_upper_acc-yellow .colour-under_upper_acc, .head_acc-yellow .colour-head_acc, .face_acc-yellow .colour-face_acc, .neck_acc-yellow .colour-neck_acc, .legs_acc-yellow .colour-legs_acc, .feet_acc-yellow .colour-feet_acc, .icon-yellow {
+.upper-yellow .colour-upper, .lower-yellow .colour-lower, .under_lower-yellow .colour-under_lower, .under_upper-yellow .colour-under_upper, .head-yellow .colour-head, .face-yellow .colour-face, .neck-yellow .colour-neck, .hands-yellow .colour-hands, .legs-yellow .colour-legs, .feet-yellow .colour-feet, .upper_acc-yellow .colour-upper_acc, .lower_acc-yellow .colour-lower_acc, .under_lower_acc-yellow .colour-under_lower_acc, .under_upper_acc-yellow .colour-under_upper_acc, .head_acc-yellow .colour-head_acc, .face_acc-yellow .colour-face_acc, .neck_acc-yellow .colour-neck_acc, .hands_acc-yellow .colour-hands_acc, .legs_acc-yellow .colour-legs_acc, .feet_acc-yellow .colour-feet_acc, .icon-yellow {
 	-webkit-filter: hue-rotate(65deg) saturate(100%) brightness(290%) contrast(300%) sepia(0.55);
 	filter: hue-rotate(65deg) saturate(100%) brightness(290%) contrast(300%) sepia(0.55);
 }
-.upper-brown .colour-upper, .lower-brown .colour-lower, .under_lower-brown .colour-under_lower, .under_upper-brown .colour-under_upper, .head-brown .colour-head, .face-brown .colour-face, .neck-brown .colour-neck, .legs-brown .colour-legs, .feet-brown .colour-feet, .upper_acc-brown .colour-upper_acc, .lower_acc-brown .colour-lower_acc, .under_lower_acc-brown .colour-under_lower_acc, .under_upper_acc-brown .colour-under_upper_acc, .head_acc-brown .colour-head_acc, .face_acc-brown .colour-face_acc, .neck_acc-brown .colour-neck_acc, .legs_acc-brown .colour-legs_acc, .feet_acc-brown .colour-feet_acc, .icon-brown {
+.upper-brown .colour-upper, .lower-brown .colour-lower, .under_lower-brown .colour-under_lower, .under_upper-brown .colour-under_upper, .head-brown .colour-head, .face-brown .colour-face, .neck-brown .colour-neck, .hands-brown .colour-hands, .legs-brown .colour-legs, .feet-brown .colour-feet, .upper_acc-brown .colour-upper_acc, .lower_acc-brown .colour-lower_acc, .under_lower_acc-brown .colour-under_lower_acc, .under_upper_acc-brown .colour-under_upper_acc, .head_acc-brown .colour-head_acc, .face_acc-brown .colour-face_acc, .neck_acc-brown .colour-neck_acc, .hands_acc-brown .colour-hands_acc, .legs_acc-brown .colour-legs_acc, .feet_acc-brown .colour-feet_acc, .icon-brown {
 	-webkit-filter: hue-rotate(55deg) saturate(100%) brightness(90%) contrast(100%);
 	filter: hue-rotate(55deg) saturate(100%) brightness(90%) contrast(100%);
 }
