--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -510,7 +510,7 @@ body.has-images #story-caption .storyCaptionDivExtended {
 }
 
 .shopImg {
-	height: 128px;
+	height: 192px;
 	width: 128px;
 	overflow: hidden;
 	background-color: #222;
@@ -518,13 +518,14 @@ body.has-images #story-caption .storyCaptionDivExtended {
 
 .shopImg > * {
 	position: absolute;
-	height: 128px;
+	height: 192px;
+	left:-32px;
 	overflow: hidden;
 }
 
 .hideImageOverflow {
 	overflow: hidden;
-	height: 128px;
+	height: 160px;
 	width: 128px;
 	position: relative;
 }
