Add combat images for tube top

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1299,6 +1299,12 @@ removed unused:
 .layer-sexlashes {
 	z-index: 90;
 }
+.layer-sexbreastunderupper {
+	z-index: 96
+}
+.layer-sexbreastupper {
+	z-index: 97
+}
 .layer-sexbasefront {
 	z-index: 100;
 }
