Added options to settings to disable combat and sidebar CSS animations
- Includes new option to show all tips

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -779,6 +779,17 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	left: 0px;
 }
 
+.noAnimations img {
+	-webkit-animation-duration: unset !important;
+    -webkit-animation-timing-function: unset !important;
+    -webkit-animation-iteration-count: unset !important;
+    -webkit-animation-name: unset !important;
+    animation-duration: unset !important;
+    animation-timing-function: unset !important;
+    animation-iteration-count: unset !important;
+    animation-name: unset !important;
+}
+
 .imgLighten {
 	background-color: #444 !important;
 }
