Add new clothing images
- new combat images for tube top and towel top
- new neck accessory: necktie
- update dress shirt images to be colourable, add white, black and pink as possible colours for dress shirt
- add new parameter to upper clothes: has_collar, it makes necktie visually hidden under the collar (only dress shirt has this currently)

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1305,6 +1305,13 @@ removed unused:
 .layer-sexbreastupper {
 	z-index: 97
 }
+.layer-sextiedoggy {
+	z-index: 99;
+}
+/* z-index of bound hands 150, hair 140 */
+.layer-sextiemissionary {
+	z-index: 142;
+}
 .layer-sexbasefront {
 	z-index: 100;
 }
