Fix certain colours for some underwear
Images for some underwear a have less saturated red colour as a base, which doesn't work well with light colours, they become too bright and colour clips.
Let's say "thanks" to broken implementation of hue-rotate() filter across all browsers, which fucks up saturation and lighness in the process of changing the hue.

- colours white, yellow and tangerine replaced with pale-white, pale-yellow and pale-tangerine
- affected under lower: boyshorts, briefs, crotchless panties, g-string, lace panties, plain panties, thong
- affected under upper: lace bra, plain bra

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -652,7 +652,8 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	color: #FFD700;
 }
 
-.yellow {
+.yellow,
+.pale-yellow {
 	color: #FFD700;
 }
 
@@ -660,7 +661,8 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	color: #f28500
 }
 
-.tangerine {
+.tangerine,
+.pale-tangerine {
 	color: #f28500
 }
 
@@ -1810,6 +1812,11 @@ label {
 	filter: hue-rotate(0deg) saturate(0%) brightness(440%) contrast(140%);
 }
 
+.clothes-pale-white {
+	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(250%) contrast(100%);
+	filter: hue-rotate(0deg) saturate(0%) brightness(250%) contrast(100%);
+}
+
 .clothes-red {
 	-webkit-filter: hue-rotate(0deg) saturate(100%) brightness(100%) contrast(100%);
 	filter: hue-rotate(0deg) saturate(100%) brightness(100%) contrast(100%);
@@ -1840,6 +1847,11 @@ label {
 	filter: hue-rotate(60deg) saturate(150%) brightness(200%) contrast(100%);
 }
 
+.clothes-pale-tangerine {
+	-webkit-filter: hue-rotate(60deg) saturate(400%) brightness(130%) contrast(100%);
+	filter: hue-rotate(60deg) saturate(400%) brightness(130%) contrast(100%);
+}
+
 .clothes-teal {
 	-webkit-filter: hue-rotate(-180deg) saturate(75%) brightness(200%) contrast(100%);
 	filter: hue-rotate(-180deg) saturate(75%) brightness(200%) contrast(100%);
@@ -1848,6 +1860,11 @@ label {
 .clothes-yellow {
 	-webkit-filter: hue-rotate(65deg) saturate(100%) brightness(290%) contrast(300%) sepia(0.55);
 	filter: hue-rotate(65deg) saturate(100%) brightness(290%) contrast(300%) sepia(0.55);
+}
+
+.clothes-pale-yellow {
+	-webkit-filter: hue-rotate(65deg) saturate(100%) brightness(250%) contrast(120%);
+	filter: hue-rotate(65deg) saturate(100%) brightness(250%) contrast(120%);
 }
 
 .clothes-brown {
