Implement pubic hair for males

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1063,7 +1063,7 @@ removed unused:
 	z-index: 62;
 }
 .layer-penis-chastity {
-	z-index: 63;
+	z-index: 64;
 }
 .layer-lashes {
 	z-index: 64;
@@ -1076,6 +1076,12 @@ removed unused:
 }
 .layer-genitals {
 	z-index: 65;
+}
+.layer-penis {
+	z-index: 160;
+}
+.layer-pbhairballs {
+	z-index: 161;
 }
 .layer-underParasite {
 	z-index: 66;
@@ -1175,9 +1181,6 @@ removed unused:
 }
 .layer-over_head {
 	z-index: 152;
-}
-.layer-penis {
-	z-index: 160;
 }
 
 .layer-parasite {
