Quality of Life: - Added CSS for gold links. - The Attitudes Menu will display as a gold link when a new option is available to the player. - The "Flaunt" option now actually requires the full Demon TF to select, but is visible as an option after the player gets any transformation. - The Livestock Attitudes passage is now unused, as it was identical to the normal one.

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -648,7 +648,7 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	color: #AA4BC8;
 }
 
-.gold, .gold button {
+.gold, .gold button, .goldLink a {
 	color: #FFD700;
 }
 
