Added new christmas gift's for Robin
- Includes code improvements allowing for different at a later date

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -479,6 +479,10 @@ mouse.tooltip:hover span {
 	border: dotted pink 1px;
 }
 
+#ui-bar-body {
+	overflow-x: hidden;
+}
+
 .reducedLineHeight .passage {
 	line-height: 1.5;
 }
@@ -757,7 +761,7 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	overflow: hidden;
 	border-top: #fff 2px solid;
 	border-bottom: #fff 2px solid;
-	position: fixed;
+	position: absolute;
 	top: 232px;
 	left: 0px;
 	background-color: #222;
@@ -790,7 +794,7 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	height: 256px;
 	width: 256px;
 	overflow: hidden;
-	position: fixed;
+	position: absolute;
 	top: 0px;
 	left: 0px;
 	background-color: #222;
@@ -852,56 +856,56 @@ body.has-images #story-caption .storyCaptionDivExtended {
 }
 
 #daystate {
-	position: fixed;
+	position: absolute;
 	left: 0px;
 	top: 0px;
 	z-index: 10;
 }
 
 #weather {
-	position: fixed;
+	position: absolute;
 	left: 0px;
 	top: 64px;
 	z-index: 10;
 }
 
 #location {
-	position: fixed;
+	position: absolute;
 	left: 0px;
 	top: 128px;
 	z-index: 10;
 }
 
 #spray1 {
-	position: fixed;
+	position: absolute;
 	left: 0px;
 	top: 192px;
 	z-index: 10;
 }
 
 #spray2 {
-	position: fixed;
+	position: absolute;
 	left: 13px;
 	top: 192px;
 	z-index: 10;
 }
 
 #spray3 {
-	position: fixed;
+	position: absolute;
 	left: 27px;
 	top: 192px;
 	z-index: 10;
 }
 
 #spray4 {
-	position: fixed;
+	position: absolute;
 	left: 42px;
 	top: 192px;
 	z-index: 10;
 }
 
 #spray5 {
-	position: fixed;
+	position: absolute;
 	left: 56px;
 	top: 192px;
 	z-index: 10;
