Fix for misshapen button on sub tabs

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -55,6 +55,10 @@ mouse.tooltip:hover span {
 	border: 1px solid #444;
 }
 
+.widerButton button {
+	max-width: 280px;
+ }
+
 .fixedClose {
 	position: -webkit-sticky;
 	position: sticky;
