--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -770,6 +770,7 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	top: 232px;
 	left: 0px;
 	background-color: #222;
+	z-index: 1000;
 }
 
 #stats > * {
