Updated characteristics UI to use new block style widgets.
Colored text at top of characteristics page uses new widget to cut down on repeated HTML and lengthy if/else blocks.

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -2655,3 +2655,199 @@ label {
 		filter: hue-rotate(360deg);
 	}
 }
+
+#characteristics-display {
+    position: relative;
+	z-index: 0;
+}
+
+.characteristic-box-list {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.characteristic-box-list .characteristic-box {
+	position: relative;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1 1 100px;
+    min-width: 18%;
+    margin: 0.15rem;
+    border: 1px solid #aaa;
+	padding: 0.3rem;
+	text-align: center;
+}
+
+#base-characteristics .characteristic-box {
+	min-width: 23%;
+}
+
+.characteristic-box-list .characteristic-top-line {
+	align-self: flex-start;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+	font-size: 1.1em;
+}
+
+#base-characteristics .characteristic-top-line {
+	font-size: 1.2em;
+}
+
+.characteristic-box-list .characteristic-title {
+    flex: 1;
+    align-self: flex-end;
+    text-align: left;
+    padding-left: 0.5rem;
+}
+
+.characteristic-box-list .characteristic-top-line .characteristic-level .grade-percent {
+	display: inline-block; 
+	min-width:37px
+}
+
+.characteristic-box-list .characteristic-description {
+    padding: 0.3rem;
+}
+
+.characteristic-box-list .characteristic-description.grade-progress {
+    border-bottom: 1px solid gray;
+    width: 80%;
+    padding-bottom: 0;
+	margin-bottom: 0.3rem;
+}
+
+.characteristic-box-list .meter {
+	position: absolute;
+	bottom: 0;
+}
+
+#characteristics-display h4 {
+	margin-top: 2rem;
+	margin-bottom: 0;
+	font-weight: normal;
+}
+
+#base-skills.characteristic-box-list .characteristic-box {
+    min-width: var(--min-width);
+}
+
+.characteristic-box-extras {
+	margin-left: 0.5rem;
+}
+
+#player-body {
+	position: absolute;
+	width: 256px;
+    left: calc(50% - 127px + 0.3rem);
+	display: flex;
+	justify-content: center;
+	pointer-events: none;
+	z-index: 0;
+}
+
+#player-body #img {
+	position: relative;
+}
+
+#sex-diagram {
+	display: flex;
+	width: calc(100% - 0.3rem);
+	padding: 0.3rem 0.15rem;
+}
+
+#sex-diagram .sex-diagram-box {
+	display: flex;
+}
+
+#sex-diagram .characteristic-box-list {
+	flex-direction: column;
+	flex-wrap: nowrap;
+	width: 50%;
+	padding: 0;
+	margin: 0;
+}
+
+#sex-diagram .characteristic-box-list .characteristic-box {
+	width: 50%;
+	margin: 0.15rem 0;
+	z-index: 1;
+}
+
+#sex-diagram .connector-box {    
+    position: relative;
+    height: 100%;
+    flex: 1;
+	margin: 0.15rem 0;
+	z-index: 1;
+}
+
+#sex-diagram .connector-box > div {
+	position: absolute;
+	top:0;
+}
+
+#sex-diagram .connector-box-top {
+	border-top: 1px solid #aaa;
+}
+
+#sex-diagram .connector-box-bottom {
+	height: var(--connector-height);
+	border-bottom: 1px solid #aaa;
+}
+
+#sex-diagram .connector-box.invert .connector-box-bottom {
+	top: calc( -1 * var(--connector-height));
+	border-top: 1px solid #aaa;
+	border-bottom: none;
+}
+
+#sex-diagram .left-column .connector-box-top {
+	left: 0;	
+	right: var(--center-offset);
+} 
+
+#sex-diagram .left-column .connector-box-bottom {
+	left: calc(100% - var(--center-offset));
+	right: var(--end-offset);
+	border-left: 1px solid #aaa;
+}
+
+#sex-diagram .right-column .connector-box-top {
+	left: var(--center-offset);
+	right: 0;	
+} 
+
+#sex-diagram .right-column .connector-box-bottom {
+	left: var(--end-offset);
+	right: calc(100% - var(--center-offset));
+	border-right: 1px solid #aaa;
+}
+
+@media(max-width: 1200px) {
+	#base-characteristics .characteristic-box,
+	.characteristic-box-list .characteristic-box {
+		min-width: 45%;
+	}
+
+	#base-skills.characteristic-box-list .characteristic-box {
+		min-width: 30%;
+	}
+
+	#player-body {
+		display: none;
+	}
+
+	#sex-diagram .connector-box {
+		display: none;
+	}
+
+	#sex-diagram .left-column .connector-box {
+		margin-right: 0.15rem;
+	}
+
+	#sex-diagram .right-column {
+		margin-left: 0.15rem;
+	}
+}
