Added `Curious Attire` feat and related feat boost
- Removed older `hermaphrodite` feat boost as it was not made use of

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -484,10 +484,6 @@ mouse.tooltip:hover span {
 	border: dotted pink 1px;
 }
 
-#ui-bar-body {
-	overflow-x: hidden;
-}
-
 .reducedLineHeight .passage {
 	line-height: 1.5;
 }
@@ -766,7 +762,7 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	overflow: hidden;
 	border-top: #fff 2px solid;
 	border-bottom: #fff 2px solid;
-	position: absolute;
+	position: fixed;
 	top: 232px;
 	left: 0px;
 	background-color: #222;
@@ -800,7 +796,7 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	height: 256px;
 	width: 256px;
 	overflow: hidden;
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	background-color: #222;
@@ -824,7 +820,11 @@ body.has-images #story-caption .storyCaptionDivExtended {
 }
 
 .imgLighten {
-	background-color: #444 !important;
+	background-color: #777 !important;
+}
+
+.imgLighten2 {
+	background-color: #999 !important;
 }
 
 #ui-bar-toggle {
@@ -862,60 +862,84 @@ body.has-images #story-caption .storyCaptionDivExtended {
 }
 
 #daystate {
-	position: absolute;
+	position: fixed;
 	left: 0px;
 	top: 0px;
 	z-index: 10;
 }
 
 #weather {
-	position: absolute;
+	position: fixed;
 	left: 0px;
 	top: 64px;
 	z-index: 10;
 }
 
 #location {
-	position: absolute;
+	position: fixed;
 	left: 0px;
 	top: 128px;
 	z-index: 10;
 }
 
 #spray1 {
-	position: absolute;
+	position: fixed;
 	left: 0px;
 	top: 192px;
 	z-index: 10;
 }
 
 #spray2 {
-	position: absolute;
+	position: fixed;
 	left: 13px;
 	top: 192px;
 	z-index: 10;
 }
 
 #spray3 {
-	position: absolute;
+	position: fixed;
 	left: 27px;
 	top: 192px;
 	z-index: 10;
 }
 
 #spray4 {
-	position: absolute;
+	position: fixed;
 	left: 42px;
 	top: 192px;
 	z-index: 10;
 }
 
 #spray5 {
-	position: absolute;
+	position: fixed;
 	left: 56px;
 	top: 192px;
 	z-index: 10;
 }
+
+@media screen and (min-color-index:0) and(-webkit-min-device-pixel-ratio:0)
+{ @media all{
+	#ui-bar-body {
+		overflow-x: hidden;
+	}
+
+	#stats, #img, #daystate, #weather, #location, #spray1, #spray2, #spray3, #spray4, #spray5
+	{
+		position: absolute;
+	}
+}}
+
+@media not all and (min-resolution:.001dpcm) { 
+    @media all{
+	#ui-bar-body {
+		overflow-x: hidden;
+	}
+
+	#stats, #img, #daystate, #weather, #location, #spray1, #spray2, #spray3, #spray4, #spray5
+	{
+		position: absolute;
+	}
+}}
 
 #divandroidxray {
 	position: relative;
