Headbutt action and old combat expression
Features:

Fixes:
- "NPC Dominance" appearing instead of "Robin's Confidence" or "Whitney's Dominance".
- Gender confusion for some named NPCs in bsin's Asylum scenes.
- Incorrect grammar when referring to the loincloth.
- Fixed an indenting issue and missing icon error for the necktie.
- Cleaned up and added comments regarding the new colour_combat tag for clothes. This tag is only needed on clothing that uses a placeholder sprite and needs it to be coloured, while only having one colour option itself. It is not needed on any clothing that has its own hard-coloured sprite, such as the chastity belts or collar.
- Typos.

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1326,14 +1326,17 @@ removed unused:
 .layer-sexbase {
 	z-index: 10;
 }
-.layer-sexlegsback {
+.layer-sexskinback {
 	z-index: 11;
 }
-.layer-sexlegsbackacc {
+.layer-sexlegsback {
 	z-index: 12;
 }
+.layer-sexlegsbackacc {
+	z-index: 13;
+}
 .layer-sexbaseoverlay {
-	z-index: 12;
+	z-index: 13;
 }
 .layer-sexeyes {
 	z-index: 20;
