Multiple changes - Improved the display of the preset import confirmation - Added the `$bodysize` variable to make the presets clearer as the previous value was not clear to what it was for - Fix for named npc breast size check prevent it from being automatically being set - Further changes to the preset objects and settings validator

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -595,6 +595,15 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	background-color: red;
 }
 
+.presetConfirm {
+	line-height: 1.4;
+}
+
+.presetConfirm ul {
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+}
+
 .red {
 	color: #EC3535;
 }
