Social popup UI overhaul

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -2698,14 +2698,17 @@ label {
 	}
 }
 
-#characteristics-display {
+#characteristics-display,
+#socials-display {
     position: relative;
 	z-index: 0;
 }
 
-.characteristic-box-list {
+.characteristic-box-list,
+.social-box-list {
 	display: flex;
 	flex-wrap: wrap;
+	position: relative;
 }
 
 .characteristic-box-list .characteristic-box {
@@ -2737,14 +2740,16 @@ label {
 	font-size: 1.2em;
 }
 
-.characteristic-box-list .characteristic-title {
+.characteristic-box-list .characteristic-title,
+.social-box .social-top-line .social-name {
     flex: 1;
     align-self: flex-end;
     text-align: left;
     padding-left: 0.5rem;
 }
 
-.characteristic-box-list .characteristic-top-line .characteristic-level .grade-percent {
+.characteristic-box-list .characteristic-top-line .characteristic-level .grade-percent,
+.social-box .social-top-line .social-title {
 	display: inline-block; 
 	min-width:37px
 }
@@ -2765,7 +2770,8 @@ label {
 	bottom: 0;
 }
 
-#characteristics-display h4 {
+#characteristics-display h4,
+#social-display h4 {
 	margin-top: 2rem;
 	margin-bottom: 0;
 	font-weight: normal;
@@ -2892,4 +2898,209 @@ label {
 	#sex-diagram .right-column {
 		margin-left: 0.15rem;
 	}
+}
+
+.social-box-list .social-box {
+	position: relative;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 250px;
+    max-width: 100%;
+    margin: 0.15rem;
+    border: 1px solid #aaa;
+    text-align: center;
+    overflow: hidden;
+    flex: 1 1 32.4%;
+}
+
+.social-box .social-top-line {
+	display: flex;
+	align-items: space-between;
+    font-size: 1.1em;
+    border-bottom: 1px solid #444;
+    padding: 0.3em;
+    align-self: stretch;
+}
+
+.social-box .social-top-line .social-title {
+	margin-right: 5px;
+	text-transform: capitalize;
+}
+
+.social-box .social-top-line .love-interest-icon {
+	width: 24px;
+	height: 24px;
+}
+
+.social-box .social-description {
+	padding: 0.5em;
+	font-size: 90%;
+}
+
+.social-box .social-description .meter {
+	position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.social-box .relation-stat-list {
+	display: flex;
+    flex-wrap: wrap;
+    background-image: linear-gradient(transparent 50%, #444 0.1em, transparent calc(50% + .1em)), linear-gradient(90deg, transparent 50%, #444 .1em, transparent calc(50% + .1em));
+    border-top: 1px solid #444;
+    background-size: contain;
+    background-repeat: no-repeat;
+    flex: 1;
+    width: 100%;
+    min-height: 130px;
+}
+
+.social-box .relation-stat-list.no-images {
+	min-height: 80px;
+}
+
+.social-box .relation-stat-list .relation-stat-block {
+	position: relative;
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: calc(50% - 0.6em);
+    padding: 0.3em;
+    width: calc(50% - 0.6em);
+    margin: 0;
+}
+
+.social-box .relation-stat-list.no-images .relation-stat-block {
+	flex-direction: row;
+	justify-content: center;
+}
+
+.social-box .relation-stat {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	z-index: 0;
+}
+
+.social-box .relation-stat-icon {
+	position: relative;
+	display: inline-block;
+	width: 32px;
+	height: 32px;
+	margin-right: 5px;
+}
+
+.social-box .relation-stat-icon .active-icon-img {
+	position: relative;
+	z-index: 1;
+    clip-path: inset(0 calc( 100% - var(--progress)) 0 0);
+}
+
+.social-box .relation-stat-icon.vertical .active-icon-img {
+	clip-path: inset(calc( 100% - var(--progress)) 0 0 0);
+}
+
+.social-box .relation-stat-icon.vertical-inverted .active-icon-img {
+	clip-path: inset(0 0 calc( 100% - var(--progress)) 0);
+}
+
+.social-box .relation-stat-icon.horizontal-inverted .active-icon-img {
+	clip-path: inset(0 0 0 calc( 100% - var(--progress)));
+}
+
+.social-box .relation-stat-icon img.inactive-icon-img.outlined {
+	filter: contrast(0.35) brightness(0.25) saturate(0) drop-shadow(0px 0px 0px white);
+}
+
+.social-box .relation-stat-icon img {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.social-box .relation-stat .relation-stat-percent {
+	text-align: left;
+}
+
+.social-box .relation-stat-block .progress-bar {
+	width: var(--progress);
+	top: auto;
+	bottom: 0;
+}
+
+#npc-relations .social-box {
+	max-width: 32.4%;
+}
+
+@media(max-width: 869px) {
+	#npc-relations .social-box {
+		max-width: 100%;
+	}
+}
+
+#secondary-npcs,
+#farm-status {
+	font-size: 85%;
+}
+
+#secondary-npcs .social-box,
+#farm-status .social-box {
+	min-width: 220px;
+	border-color: #888;
+	flex: 1 1 24.3%
+}
+
+#secondary-npcs .social-box .social-top-line
+#farm-status .social-box .social-top-line {
+	padding: 0.2rem 0 0.1rem;
+}
+
+#secondary-npcs .social-box .quick-stats {
+    display: inline-flex;
+	padding-right: 0.3em;
+	align-self: flex-end;
+	z-index: 0;
+}
+
+#secondary-npcs .social-box .quick-stats .relation-stat-block:not(:first-child) {
+    margin-left: 0.3em;
+}
+
+#secondary-npcs .social-box .relation-stat .relation-stat-icon {
+	width: 20px;
+	height: 20px;
+}
+
+#secondary-npcs .social-box .relation-stat .relation-stat-percent {
+	font-size: 85%;
+}
+
+#secondary-npcs .social-box .social-description,
+#farm-status .social-box .social-description,
+#global-recognition .social-box .social-description {
+	padding: 0.3em;
+}
+
+#faction-reputations .social-box {
+	flex: 1 1 49%;
+}
+
+#global-recognition .social-box {
+	flex: 1 1 30%;
+    min-width: 220px;
+	border-color: #666;
+}
+
+#global-recognition .social-box:last-child {
+	font-size: 120%;
+	flex-basis: 100%;
+}
+
+#global-recognition .social-box:not(:last-child) .social-description {
+	align-self: flex-start;
 }
